modified:   Exercise6/styles.css

--- a/Exercise6/styles.css
+++ b/Exercise6/styles.css
@@ -1,6 +1,10 @@
 #main-title{
     text-align: center;
 }
+body{
+    background-color: aquamarine;
+    font-family: 'Times New Roman', Times, serif;
+}
 .content{
-    margin:12px;
+    margin-bottom:12px;
 }
